# q-grid-prosumer-standalone

./: main.py  pyproject.toml  requirements.txt
evaluation/: circuit_runner.py  circuit_storage.py  metrics.py
qaoa_pipeline/circuit/: qaoa_circuit.py  qaoa_parameters.py  qiskit_circuit.py
qaoa_pipeline/utils/: layout.py
