[project]
name = "q-grid-prosumer-standalone"
version = "0.1.0"
description = "Solving the Prosumer Problem with specialized QAOA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "qiskit>=1.3.0",
    "qiskit-aer>=0.15.1",
    "scipy>=1.14.1",
    "sqlitedict>=2.1.0",
    "pydantic>=2.10.3",
    "qiskit-ibm-runtime>=0.33.2",
    "uuid>=1.30",
]
